--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "graphql": "^14.2.1",
     "graphql-request": "^3.5.0",
     "body-parser": "1.19.0",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "eslint": "6.8.0",
